[gd_scene load_steps=14 format=2]

[ext_resource path="res://Aset/Bg.png" type="Texture" id=1]
[ext_resource path="res://Aset/COOPBL.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Aset/judul.png" type="Texture" id=3]
[ext_resource path="res://Aset/T_Normal.png" type="Texture" id=4]
[ext_resource path="res://Aset/T_Pressed.png" type="Texture" id=5]
[ext_resource path="res://Aset/T_Hover.png" type="Texture" id=6]
[ext_resource path="res://Aset/Klik.wav" type="AudioStream" id=7]
[ext_resource path="res://Aset/Selamat.wav" type="AudioStream" id=8]
[ext_resource path="res://Aset/Musik.ogg" type="AudioStream" id=9]
[ext_resource path="res://Judul.gd" type="Script" id=10]
[ext_resource path="res://RuangMain.gd" type="Script" id=11]
[ext_resource path="res://Tanda.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[node name="RuangMain" type="Node2D"]
script = ExtResource( 11 )

[node name="Gambar" type="Sprite" parent="."]
position = Vector2( 514.52, 307.244 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 89.6914
margin_top = 22.4648
margin_right = 534.691
margin_bottom = 74.4648
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Mencari Perbedaan Gambar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Judul" type="Sprite" parent="."]
texture = ExtResource( 3 )
script = ExtResource( 10 )

[node name="Tween" type="Tween" parent="Judul"]

[node name="Tombol" type="TextureButton" parent="."]
margin_left = 444.495
margin_top = 516.333
margin_right = 595.495
margin_bottom = 588.333
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Musik" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
autoplay = true

[node name="SuaraKlik" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="SuaraSelamat" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="Tanda" parent="." instance=ExtResource( 12 )]
position = Vector2( 165.276, 307.244 )
id = 1

[node name="Tanda2" parent="." instance=ExtResource( 12 )]
position = Vector2( 673.818, 307.244 )
id = 1

[node name="Tanda3" parent="." instance=ExtResource( 12 )]
position = Vector2( 54.1525, 219.692 )
id = 2

[node name="Tanda4" parent="." instance=ExtResource( 12 )]
position = Vector2( 572.797, 219.692 )
id = 2

[node name="Tanda5" parent="." instance=ExtResource( 12 )]
position = Vector2( 165.276, 189.192 )
id = 3

[node name="Tanda6" parent="." instance=ExtResource( 12 )]
position = Vector2( 673.818, 189.192 )
id = 3

[node name="Tanda7" parent="." instance=ExtResource( 12 )]
position = Vector2( 219.154, 137.753 )
id = 4

[node name="Tanda8" parent="." instance=ExtResource( 12 )]
position = Vector2( 719.839, 137.753 )
id = 4

[node name="Tanda9" parent="." instance=ExtResource( 12 )]
position = Vector2( 366.197, 158.692 )
id = 5

[node name="Tanda10" parent="." instance=ExtResource( 12 )]
position = Vector2( 867.846, 160.5 )
id = 5

[node name="Tanda11" parent="." instance=ExtResource( 12 )]
position = Vector2( 298.828, 408.038 )
id = 6

[node name="Tanda12" parent="." instance=ExtResource( 12 )]
position = Vector2( 798.551, 408.038 )
id = 6

[node name="Tanda13" parent="." instance=ExtResource( 12 )]
position = Vector2( 122.465, 438.538 )
id = 7

[node name="Tanda14" parent="." instance=ExtResource( 12 )]
position = Vector2( 628.629, 438.538 )
id = 7

[node name="Tanda15" parent="." instance=ExtResource( 12 )]
position = Vector2( 485.533, 454.417 )
id = 8

[node name="Tanda16" parent="." instance=ExtResource( 12 )]
position = Vector2( 991.337, 454.417 )
id = 8

[node name="Tanda17" parent="." instance=ExtResource( 12 )]
position = Vector2( 235.8, 543.608 )
id = 9

[node name="Tanda18" parent="." instance=ExtResource( 12 )]
position = Vector2( 736.846, 543.608 )
id = 9

[node name="Tanda19" parent="." instance=ExtResource( 12 )]
position = Vector2( 396.197, 219.692 )
id = 10

[node name="Tanda20" parent="." instance=ExtResource( 12 )]
position = Vector2( 923.525, 219.692 )
id = 10

[connection signal="pressed" from="Tombol" to="." method="_on_Tombol_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
